Update outdated files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 spring.application.name=RequestService
+
 server.servlet.context-path=/api/v1
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/RequestDB
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 app.pagination.defaultPageSize=5
